docs/tests/parser/edge_cases/invalid/FuncParamWithBody.b
fn void foo(int x { return x; }) {
}
